fix: #641 EMBED_POOL 플랫폼 스레드 → 가상 스레드 전환 (메모리 절감)